# Static-Dynamic_Libs

./: .gitignore  README.md
01/: GreetingLibraryStatic.sln  GreetingLibraryStatic.vcxproj  greeter.h
01/GreeterClient/: GreeterClient.cpp  GreeterClient.vcxproj
01/GreeterLibraryStatic/: GreeterLibraryStatic.sln
01/GreeterLibraryStatic/GreeterLibraryStatic/: GreeterLibraryStatic.vcxproj  greeter.cpp  greeter.h
02/LeaverClient/: LeaverClient.vcxproj
02/LeaverLibraryDynamic/: LeaverLibraryDynamic.sln
02/LeaverLibraryDynamic/LeaverLibraryDynamic/: LeaverLibraryDynamic.vcxproj  leaver.cpp  leaver.h
03/: CMakeLists.txt  LeaverClient.cpp  leaver.h
